feat(index.html): update favicon and title

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" sizes="48x48" type="image/png" href="https://pastatic.picsart.com/cms-pastatic/960fc38c-6a37-4a67-ab3b-abca612ed06b.png" data-react-helmet="true">
+    <link rel="apple-touch-icons" sizes="60x60" type="" href="https://pastatic.picsart.com/cms-pastatic/5fe90e8f-01d2-4fd0-bfc8-f6e05836fb7d.png" data-react-helmet="true">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Optimized Photo Masonry for Picsart</title>
   </head>
   <body>
     <div id="root"></div>
